chore: added env config variable

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 APP_NAME=serviceName
 ENVIRONMENT=enviroment
+METER_NAME=meterName
+VERSION=v1.0.0
+METER_DESCRIPTION=description
+REQUEST_COUNTER_NAME=custom_request_count
+RESPONSE_COUNTER_NAME=custom_response_count
