--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@apex-org/bbox": "^0.0.2",
     "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/api-logs": "^0.52.1",
     "@opentelemetry/auto-instrumentations-node": "^0.48.0",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.52.1",
     "@opentelemetry/exporter-metrics-otlp-http": "^0.52.1",
     "@opentelemetry/exporter-metrics-otlp-proto": "^0.52.1",
     "@opentelemetry/exporter-trace-otlp-grpc": "^0.52.1",
@@ -26,6 +28,7 @@
     "express": "^4.19.2",
     "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "winston": "^3.14.1"
   }
 }
