chore: otl logging

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
 APP_NAME=serviceName
 ENVIRONMENT=enviroment
 METER_NAME=meterName
-VERSION=v1.0.0
+METER_VERSION=v1.0.0
 METER_DESCRIPTION=description
 REQUEST_COUNTER_NAME=custom_request_count
 RESPONSE_COUNTER_NAME=custom_response_count
+REQUEST_DURATION_NAME=custom_request_duration
+RESPONSE_DURATION_NAME=custom_response_duration
+LOKI_URL=http://loki:3100/loki/api/v1/push
+SERVICE_NAME=serviceName
+SERVICE_VERSION=v1.0.0
