--- a/k8s/otlp-configmap.yaml
+++ b/k8s/otlp-configmap.yaml
@@ -12,6 +12,8 @@ data:
           http:
             endpoint: 0.0.0.0:4318
     exporters:
+      otlphttp:
+        endpoint: http://loki-gateway.logging.svc.cluster.local:80/loki/api/v1/push
       prometheus:
         endpoint: "0.0.0.0:9464"
       debug:
@@ -26,4 +28,4 @@ data:
           exporters: [prometheus]
         logs:
           receivers: [otlp]
-          exporters: [debug]
+          exporters: [otlphttp]
