--- a/k8s/values.yaml
+++ b/k8s/values.yaml
@@ -1,51 +1,28 @@
+deploymentMode: SingleBinary
 loki:
   auth_enabled: false
+  server:
+    log_level: debug
+  limits_config:
+    allow_structured_metadata: true
+  commonConfig:
+    replication_factor: 1
+  storage:
+    type: 'filesystem'
   schemaConfig:
     configs:
-      - from: 2024-04-01
-        store: tsdb
-        object_store: s3
-        schema: v13
-        index:
-          prefix: loki_index_
-          period: 24h
-  ingester:
-    chunk_encoding: snappy
-  tracing:
-    enabled: true
-  querier:
-    max_concurrent: 4
-
-deploymentMode: SimpleScalable
-backend:
-  replicas: 3
-read:
-  replicas: 3
-write:
-  replicas: 3
-
-# Enable minio for storage
-minio:
-  enabled: true
-
-# Disable other components if using SimpleScalable deployment mode
+    - from: "2024-01-01"
+      store: tsdb
+      index:
+        prefix: loki_index_
+        period: 24h
+      object_store: filesystem 
+      schema: v13
 singleBinary:
+  replicas: 1
+read:
   replicas: 0
-ingester:
+backend:
   replicas: 0
-querier:
-  replicas: 0
-queryFrontend:
-  replicas: 0
-queryScheduler:
-  replicas: 0
-distributor:
-  replicas: 0
-compactor:
-  replicas: 0
-indexGateway:
-  replicas: 0
-bloomCompactor:
-  replicas: 0
-bloomGateway:
+write:
   replicas: 0
