--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@opentelemetry/api-logs": "^0.52.1",
     "@opentelemetry/auto-instrumentations-node": "^0.48.0",
     "@opentelemetry/exporter-logs-otlp-http": "^0.52.1",
+    "@opentelemetry/exporter-logs-otlp-proto": "^0.52.1",
     "@opentelemetry/exporter-metrics-otlp-http": "^0.52.1",
     "@opentelemetry/exporter-metrics-otlp-proto": "^0.52.1",
     "@opentelemetry/exporter-trace-otlp-grpc": "^0.52.1",
@@ -26,9 +27,12 @@
     "@types/node": "^20.14.10",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "pino": "^9.3.2",
+    "pino-loki": "^2.3.0",
     "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
-    "winston": "^3.14.1"
+    "winston": "^3.14.2",
+    "winston-loki": "^6.1.2"
   }
 }
