chore: added promtail as loger agent collector

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ RESPONSE_DURATION_NAME=custom_response_duration
 LOKI_URL=http://loki:3100/loki/api/v1/push
 SERVICE_NAME=serviceName
 SERVICE_VERSION=v1.0.0
+OTEL_LOGS_PATH=/var/log/serviceName
