--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ LOKI_URL=http://loki:3100/loki/api/v1/push
 SERVICE_NAME=serviceName
 SERVICE_VERSION=v1.0.0
 OTEL_LOGS_PATH=/var/log/serviceName
+OTEL_COLLECTOR_URL=http://tempo:4317
