--- a/k8s/otlp-configmap.yaml
+++ b/k8s/otlp-configmap.yaml
@@ -12,6 +12,8 @@ data:
           http:
             endpoint: 0.0.0.0:4318
     exporters:
+      otlp:
+        endpoint: tempo:4317
       otlphttp:
         endpoint: http://loki-gateway.logging.svc.cluster.local:80/otlp/v1/logs
       prometheus:
@@ -22,7 +24,7 @@ data:
       pipelines:
         traces:
           receivers: [otlp]
-          exporters: [debug]
+          exporters: [otlp, debug]
         metrics:
           receivers: [otlp]
           exporters: [prometheus]
