--- a/k8s/loki-values.yaml
+++ b/k8s/loki-values.yaml
@@ -2,7 +2,7 @@ deploymentMode: SingleBinary
 loki:
   auth_enabled: false
   server:
-    log_level: debug
+    log_level: info
   limits_config:
     allow_structured_metadata: true
   commonConfig:
