--- a/k8s/prometheus-config.yaml
+++ b/k8s/prometheus-config.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: prometheus-config
+  namespace: logging
   labels:
     app: prometheus
 data:
@@ -10,7 +11,7 @@ data:
       scrape_interval: 15s
 
     scrape_configs:
-      - job_name: dice-service
+      - job_name: otel-dice
         scrape_interval: 5s
         static_configs:
-          - targets: ['otel-dice-service.otlp.svc.cluster.local:9464']
+          - targets: ['otel-dice.otlp.svc.cluster.local:9464']
