--- a/k8s/prometheus-service.yaml
+++ b/k8s/prometheus-service.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: prometheus-service
+  name: prometheus
+  namespace: logging
 spec:
   type: NodePort
   ports:
