chore: added env variables for otel collector

--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,5 @@ RESPONSE_DURATION_NAME=custom_response_duration
 LOKI_URL=http://loki:3100/loki/api/v1/push
 SERVICE_NAME=serviceName
 SERVICE_VERSION=v1.0.0
-OTEL_LOGS_PATH=/var/log/serviceName
-OTEL_COLLECTOR_URL=http://tempo:4317
+OTEL_LOGS_PATH=/var/log/logs.log
+OTEL_COLLECTOR_ENDPOINT=http://tempo:4317
